SABADO 13/04:

	Cambios:
		- Escrito cliente
		- Escrito main del server y funciones basicas

	Seguir con:
		- Escribir ft_byte_to_char
		- Escribir funciones de debug
		- Probar
		- Añadir confirmacion de recepcion

DOMINGO 14/04:

	Cambios:
		- Añadido salto de linea al final del cliente para asegurar impresion
		- Terminado server el procesamiento del byte se hace en el bucle principal (no uso ft_byte_to_char)

	Seguir con:
		- Escribir Makefile
		- Probar a procesar byte en la interrupcion
		- Añadir Bonus

SABADO 20/04:

	Cambios:
		- Replanteamiento del server y cliente (procesado dentro de la interrupcion)
		- Makefile hecho

	Seguir con:
		- Bonus

DOMINGO 21/04:

	Cambios:
		- Norminette correjida
		- Eliminada libft (actualizado  Makefile acorde)
		- Renombrada carpeta del proyecto
		- Añadido gitignore

MIERCOLES 22/05:

	Cambios:
		- Makefile correjido hace tiempo
		- Replanteamiento con espera de confirmacion en el cliente

JUEVES 23/05:

	Cambios:
		- Añadido salto de linea al final del mensaje